Features added (FW): Added framework and new libs
* ECF: Added framework
* EXE: New exe
* EG_CONSTANTS: TEST_SET_BRIDGE is now in the generated test class.
* INI: Added a lot of new libraries, which have been built since this
program was first constructed.

NOTE: The next step is to have this program figure out where all the
libraries are on its own with some form of directory scan for ECF files.

--- a/github_libs.ini
+++ b/github_libs.ini
@@ -1,4 +1,10 @@
-randomizer
+framework
+github_helper
+graphviz
+logging_extension
+permission
 pub_sub
+randomizer
 state_machine
+test_extension
 validation
