Features changed (EXE): Minified the libs list to just web-app ECF building

--- a/github_libs.ini
+++ b/github_libs.ini
@@ -1,10 +1,7 @@
-ewf_ext
 framework
-github_helper
-graphviz
-logging_extension
-permission
-pub_sub
+html
+css
+bem
+ewf_ext
+json_ext
 randomizer
-state_machine
-validation
